[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Elementos/Visuais/EscolaFase1/Pergunta_01-Errado.png" type="Texture" id=2]
[ext_resource path="res://Elementos/Visuais/Icones/Erro.png" type="Texture" id=3]
[ext_resource path="res://Codigos/TelaEscolaFase1.gd" type="Script" id=4]
[ext_resource path="res://Elementos/Visuais/Icones/Acerto.png" type="Texture" id=5]
[ext_resource path="res://Elementos/Visuais/EscolaFase1/Pergunta_01-Certo.png" type="Texture" id=6]
[ext_resource path="res://Cenas/AudioErro.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/AudioAcerto.tscn" type="PackedScene" id=8]

[node name="TelaEscolaFase1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.984314, 0.607843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaixaDialogo" parent="." instance=ExtResource( 1 )]

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0"]
text = "EscolaFase1_Pergunta_01"

[node name="BotaoDireita" parent="CaixaDialogo/Margem/Elementos" index="2"]
disabled = true

[node name="Icone" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="0"]
margin_right = 223.0

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="1"]
margin_right = 223.0
text = "BotaoIr"

[node name="LadoDireito" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.7
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="LadoDireito"]
margin_left = 480.0
margin_top = 378.0
margin_right = 480.0
margin_bottom = 378.0

[node name="Imagem" type="Node2D" parent="LadoDireito/Centro"]
position = Vector2( -250, -250 )

[node name="LadoEsquerdo" type="CenterContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.7
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="LadoEsquerdo"]
margin_left = 480.0
margin_top = 378.0
margin_right = 480.0
margin_bottom = 378.0

[node name="Imagem" type="Node2D" parent="LadoEsquerdo/Centro"]
position = Vector2( -250, -250 )

[node name="Certo" type="TextureButton" parent="."]
margin_left = 1384.0
margin_top = -576.0
margin_right = 1884.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 250, 250 )
toggle_mode = true
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="Certo"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
border_color = Color( 0, 0, 0.392157, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Acerto" type="Sprite" parent="Certo"]
visible = false
self_modulate = Color( 0, 1, 0.0392157, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
centered = false

[node name="AudioAcerto" parent="Certo" instance=ExtResource( 8 )]

[node name="Errado" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = -568.0
margin_right = 540.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 250, 250 )
toggle_mode = true
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="Errado"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
border_color = Color( 0, 0, 0.392157, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Erro" type="Sprite" parent="Errado"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="AudioErro" parent="Errado" instance=ExtResource( 7 )]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="item_rect_changed" from="." to="." method="_on_TelaEscolaFase1_Redimensionar"]
[connection signal="toggled" from="Certo" to="." method="_on_Certo_Estado"]
[connection signal="toggled" from="Errado" to="." method="_on_Errado_Estado"]

[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
